--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "slim/slim": "3.0.*",
         "league/oauth2-server": "^5.1",
         "slim/twig-view": "^2.2",
-        "monolog/monolog": "^1.22"
+        "monolog/monolog": "^1.22",
+        "slim/csrf": "^0.8.1"
     },
     "require-dev": {
         "league/event": "^2.1",
